--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "phpunit/phpunit": "3.7.*",
         "squizlabs/php_codesniffer": "~1.5.0",
         "phpmd/phpmd": "~1.5.0",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "eso/ireflection": "0.1.*"
     },
     "autoload": {
         "psr-0": { "EBT\\Fastc": "src/" }
