--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=5.4.0",
         "guzzle/guzzle": ">=3.7.0,<3.9.0",
-        "jms/serializer": "0.14.0",
+        "jms/serializer": ">=0.14.0",
         "ebidtech/config-loader": "1.1.*"
     },
     "require-dev": {
